2009-09-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Thread.cs: Remove [Get|Set]CompressedStack for NET_2_1

2009-09-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Thread.cs: Remove CurrentPrincipal property for NET_2_1
	* ExecutionContext.cs: Remove Run method for NET_2_1

2009-09-20  Sebastien Pouliot  <sebastien@ximian.com>

	* EventWaitHandle.cs: Remove AccessControl usage for NET_2_1
	* Mutex.cs: Remove some ctors and AccessControl usage for NET_2_1
	* NativeEventCalls.cs: Remove AccessControl usage for NET_2_1

2009-08-19  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelLoopState.cs: Take in account that
	AtomicBoolean is a class.

2009-08-19  Jérémie Laval  <jeremie.laval@gmail.com>

	* AtomicBoolean.cs: Turn it into a class
	* CountdownEvent.cs: Work on cached variable. Make sure
	count doesn't go under 0.

2009-08-11  Jérémie Laval  <jeremie.laval@gmail.com>

	* Watch.cs:
	* SpinWait.cs:
	* CountdownEvent.cs:
	* CancellationToken.cs:
	* ICancelableOperation.cs:
	* CancellationTokenSource.cs:
	* CancellationTokenRegistration.cs: Add BOOTSTRAP_NET_4_0.

2009-08-11  Jérémie Laval  <jeremie.laval@gmail.com>

	* Parallel.cs: Disable While method.
	* CountdownEvent.cs: Fix method signature.
	* Barrier.cs: Moved type.
	* AggregateException.cs: Moved type.

2009-08-04 Jérémie Laval  <jeremie.laval@gmail.com>

	* SpinLock: Remove unused private methods.

2009-08-03  Zoltan Varga  <vargaz@gmail.com>

	* Thread.cs: Always call Thread_free_internal from the finalizer, since
	it frees other things besides the handle. Fixes #527576.

2009-07-31  Jérémie Laval  <jeremie.laval@gmail.com>

        * Snzi.cs:
        * Parallel.cs:
        * SpinLock.cs:
        * SpinWait.cs:
        * ThreadLocal.cs:
        * SemaphoreSlim.cs:
        * CountdownEvent.cs:
        * ManualResetEventSlim.cs
        * CancellationTokenSource.cs: Various 4.0 b1 API mismatch fixes.

2009-07-30 Jérémie Laval  <jeremie.laval@gmail.com>

	* AggregateException.cs: